Fix menu visibility with javascript addon

--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -16,7 +16,9 @@ $button-background-color: darken(darkblue, 12%);
 
 $background-opacity: 0.7;
 
-@use "bulma/bulma";
+@use "bulma/sass" with (
+  $background: black,
+);
 
 // html, body {
 //   background: linear-gradient(rgba(0, 0, 0, $background-opacity), rgba(0, 0, 0, $background-opacity)),
@@ -56,17 +58,3 @@ $background-opacity: 0.7;
 }
 
 
-/* Hide the checkbox */
-.menu-toggle {
-  display: none;
-}
-
-/* Default: Menu hidden on mobile */
-.navbar-menu {
-  display: none;
-}
-
-/* When checkbox is checked, show menu */
-.menu-toggle:checked ~ .navbar-menu {
-  display: block;
-}
